; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_soc_rt3050.c_rt5350_fwd_config.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_soc_rt3050.c_rt5350_fwd_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fe_priv = type { i32 }
%struct.net_device = type { i32 }

@NETIF_F_RXCSUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fe_priv*)* @rt5350_fwd_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rt5350_fwd_config(%struct.fe_priv* %0) #0 {
  %2 = alloca %struct.fe_priv*, align 8
  %3 = alloca %struct.net_device*, align 8
  store %struct.fe_priv* %0, %struct.fe_priv** %2, align 8
  %4 = load %struct.fe_priv*, %struct.fe_priv** %2, align 8
  %5 = call %struct.net_device* @priv_netdev(%struct.fe_priv* %4)
  store %struct.net_device* %5, %struct.net_device** %3, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = getelementptr inbounds %struct.net_device, %struct.net_device* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @NETIF_F_RXCSUM, align 4
  %10 = and i32 %8, %9
  %11 = call i32 @rt5350_rxcsum_config(i32 %10)
  ret i32 0
}

declare dso_local %struct.net_device* @priv_netdev(%struct.fe_priv*) #1

declare dso_local i32 @rt5350_rxcsum_config(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
